[package]
name = "nonblock"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]

documentation = "http://anowell.github.io/nonblock-rs/nonblock/"
repository = "https://github.com/anowell/nonblock-rs"
license = "MIT"

keywords = ["nonblocking", "O_NONBLOCK", "reader"]

[dependencies]
libc = "0.2"

[dev-dependencies]
chrono = { version = "0.2", features = ["serde"] }
serde_json = "0.7"
